--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Stock Trader</title>
-    <link rel="stylesheet" href="global.css"> <!-- Link to your global CSS file -->
-    <script defer src="global.js"></script> <!-- Link to your global JavaScript file -->
+    <link rel="stylesheet" href="frontend/global.css"> <!-- Link to your global CSS file -->
+    <script defer src="frontend\global.js"></script> <!-- Link to your global JavaScript file -->
 </head>
 <body>
     <div id="root"></div> <!-- React will render components here -->
